# gwas-scrnaseq-integration

./: .gitignore  README.md  cell_score_viz.qmd  celseq_processing.qmd  gwas_processing.ipynb  make_reference.ipynb  pyproject.toml  requirements.txt  score_cells.ipynb
src/: constants.py  utils.py
src/gwas_processing/: commands.py  utils.py
src/magma_wrapper/: commands.py  magma.ipynb
src/make_reference/: classes.py  commands.py  make_reference.ipynb  utils.py
src/score_cells/: utils.py
src/seurat/: celseq_processing.R
