[tool.poetry]
name = "capstone-project"
version = "0.1.0"
description = ""
authors = ["cteng585 <cteng585@stanford.edu>"]
readme = "README.md"
packages = [{include = "capstone_project"}]

[tool.poetry.dependencies]
python = "^3.10"
anndata = "0.9.1"
certifi = "2022.12.7"
charset-normalizer = "3.1.0"
colorama = "0.4.6"
contourpy = "1.0.7"
cycler = "0.11.0"
cython = "3.0.0"
fire = "0.5.0"
fonttools = "4.39.3"
h5py = "3.8.0"
idna = "3.4"
iniconfig = "2.0.0"
joblib = "1.2.0"
kiwisolver = "1.4.4"
llvmlite = "0.40.0"
matplotlib = "3.7.1"
natsort = "8.3.1"
networkx = "3.1"
numba = "0.57.0"
numpy = "1.24.2"
packaging = "23.1"
pandas = "2.0.0"
patsy = "0.5.3"
pillow = "9.5.0"
pluggy = "1.0.0"
pynndescent = "0.5.10"
pyparsing = "3.0.9"
pytest = "7.3.1"
python-dateutil = "2.8.2"
pytz = "2023.3"
requests = "2.28.2"
scanpy = "1.9.3"
scdrs = "1.0.2"
scikit-learn = "1.2.2"
scikit-misc = "0.2.0"
scipy = "1.9.3"
seaborn = "0.12.2"
session-info = "1.0.0"
six = "1.16.0"
statsmodels = "0.14.0"
stdlib-list = "0.8.0"
termcolor = "2.3.0"
threadpoolctl = "3.1.0"
tqdm = "4.65.0"
tzdata = "2023.3"
umap-learn = "0.5.3"
urllib3 = "1.26.15"
pybedtools = "^0.9.0"
typer = "^0.9.0"
bitarray = "^2.7.6"
nose = "^1.3.7"
sh = "^2.0.6"
rbo = "^0.1.3"
pydantic = "^2.4.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"
jupyter = "^1.0.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
